# portfolio

./: .dockerignore  .gitignore  Dockerfile-backend  Dockerfile-frontend  Makefile  README.md  docker-compose.yml  nginx.conf
backend/: pyproject.toml
backend/src/: __init__.py  __main__.py  di.py  fetcher.py  routes.py  schemas.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: main.js  style.css
